--- a/EmployeePayRollMVC/Views/Emp/Create.cshtml
+++ b/EmployeePayRollMVC/Views/Emp/Create.cshtml
@@ -12,11 +12,11 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="EmpId" class="control-label"></label>
                 <input asp-for="EmpId" class="form-control" />
                 <span asp-validation-for="EmpId" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="EmpName" class="control-label"></label>
                 <input asp-for="EmpName" class="form-control" />
