--- a/EmployeePayRollMVC/Views/Emp/Details.cshtml
+++ b/EmployeePayRollMVC/Views/Emp/Details.cshtml
@@ -3,11 +3,21 @@
 @{
     ViewData["Title"] = "Details";
 }
+<div class="header-content header">
+    <div class="logo-content">
+        <img src="~/assets/logo.png" class="logoicon">
+        <div >
+            <span class="emp-text">EMPLOYEE</span><br>
+            <span class="emp-text emp-payroll">PAYROLL</span>
+        </div>
+    </div>
+</div>
 
-<h1>Details</h1>
+<link rel="stylesheet" href="~/css/EmpPayRoll.css" />
+
+<h2 class="form-head">Employee Details</h2>
 
 <div>
-    <h4>EmployeeModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -26,7 +36,8 @@
             @Html.DisplayNameFor(model => model.Profileimage)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Profileimage)
+            <img src="@Url.Content(@Model.Profileimage)" class="imgindex"/>
+            @*@Html.DisplayFor(model => model.Profileimage)*@
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Gender)
