--- a/EmployeePayRollMVC/Views/Emp/Edit.cshtml
+++ b/EmployeePayRollMVC/Views/Emp/Edit.cshtml
@@ -4,9 +4,19 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="header-content header">
+    <div class="logo-content">
+        <img src="~/assets/logo.png" class="logoicon">
+        <div >
+            <span class="emp-text">EMPLOYEE</span><br>
+            <span class="emp-text emp-payroll">PAYROLL</span>
+        </div>
+    </div>
+</div>
 
-<h4>EmployeeModel</h4>
+<link rel="stylesheet" href="~/css/EmpPayRoll.css" />
+
+<h2 class="form-head">Edit Employee</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,12 +34,24 @@
             </div>
             <div class="form-group">
                 <label asp-for="Profileimage" class="control-label"></label>
-                <input asp-for="Profileimage" class="form-control" />
+
+                        @Html.RadioButtonFor(model => model.Profileimage, "~/Assets/Male1.png")
+                        <img class="imageIcon" src = "~/Assets/Male1.png"  />
+                        @Html.RadioButtonFor(model => model.Profileimage, "~/Assets/Male2.png")
+                        <img class="imageIcon" src = "~/Assets/Male2.png"  />
+                        @Html.RadioButtonFor(model => model.Profileimage, "~/Assets/Female1.png")
+                        <img class="imageIcon" src = "~/Assets/Female1.png" />
+                        @Html.RadioButtonFor(model => model.Profileimage, "~/Assets/Female2.png")
+                        <img class="imageIcon" src = "~/Assets/Female2.png"  />
+                <div/>
+                @*<input asp-for="Profileimage" class="form-control" />*@
                 <span asp-validation-for="Profileimage" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
+                 @Html.RadioButtonFor(model => model.Gender, "Male") Male
+                 @Html.RadioButtonFor(model => model.Gender, "Female") Female
+                @*<input asp-for="Gender" class="form-control" />*@
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -39,7 +61,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Salary" class="control-label"></label>
-                <input asp-for="Salary" class="form-control" />
+                 <select asp-for="Salary" class="form-control" >
+                    <option>20000</option> 
+                    <option>25000</option> 
+                    <option>30000</option> 
+                    <option>35000</option>
+                    <option>40000</option>
+                    <option>45000</option>
+                    <option>50000</option>
+                    <option>60000</option>
+                </select>
+                @*<input asp-for="Salary" class="form-control" />*@
                 <span asp-validation-for="Salary" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -55,13 +87,14 @@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
+            <div>
+       <a asp-action="Index">Back to List</a>
+     </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
