--- a/EmployeePayRollMVC/Views/Emp/Index.cshtml
+++ b/EmployeePayRollMVC/Views/Emp/Index.cshtml
@@ -3,11 +3,25 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div class="header-content header">
+    <div class="logo-content">
+        <img src="~/assets/logo.png" class="logoicon">
+        <div >
+            <span class="emp-text">EMPLOYEE</span><br>
+            <span class="emp-text emp-payroll">PAYROLL</span>
+        </div>
+    </div>
+</div>
 
-<h1>Index</h1>
+
+<link rel="stylesheet" href="~/css/EmpPayRoll.css" />
+
+<h2 class="form-list">List Of Employee's</h2>
+
+@*<h1>Index</h1>*@
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="form-create" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -19,7 +33,7 @@
                 @Html.DisplayNameFor(model => model.EmpName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Profileimage)
+                 @Html.DisplayNameFor(model => model.Profileimage)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Gender)
@@ -36,7 +50,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Notes)
             </th>
-            <th></th>
+            <th>
+                Actions
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -49,7 +65,7 @@
                 @Html.DisplayFor(modelItem => item.EmpName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Profileimage)
+                <img src="@Url.Content(item.Profileimage)" class="imgindex"/>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Gender)
